--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="#">
   <title>Understanding Typescript</title>
-  <script src="app.js"></script>
 </head>
 <body>
-  
+  <button>Click Me</button>
 </body>
+<script src="app.js"></script>
 </html>
